appId: nl.vdbdigital.app
---
# 12 - Account deletion request screen
- clearState
- launchApp
- runFlow:
    file: shared/login.yaml
    env:
      EMAIL: customer.a@local.vdb
- extendedWaitUntil:
    visible:
      id: 'customer-dashboard-screen'
    timeout: 60000
- tapOn:
    id: 'tab-customer-more'
- tapOn:
    id: 'nav-account-delete'
- assertVisible:
    id: 'screen-account-deletion'
- assertVisible:
    id: 'customer-account-delete'
- takeScreenshot: '12-account-deletion'
